@@ -716,6 +716,13 @@ public class PointValueDaoSQL extends BaseDao implements PointValueDao{
         return cnt;
     }
 
+    /**
+     * TODO There is a bug here where the end date should be exclusive!  The TCP Persistent publisher expects it to be exclusive,
+     * but as for what ramifications it will have to other modules who knows.
+     * 
+     * For example if one uses this method to count a range and then a select point values between, the results can be different!
+     * 
+     */
     public long dateRangeCount(int dataPointId, long from, long to) {
         return ejt.queryForLong("select count(*) from pointValues where dataPointId=? and ts>=? and ts<=?",
                 new Object[] { dataPointId, from, to });
